Added dependence on tidyverse 1.0.0 and added a plot function to visualise the simulated HAZ over time.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ export(getExt)
 export(getItemsFromSubjects)
 export(getSubjectItems)
 export(getSubjectLevelItems)
+export(plotHAZ)
 export(subjects)
