--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
 Depends:
-  dplyr (>= 0.5.0)
+  tidyverse (>= 1.0.0)
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
