--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
-Depends:
-  tidyverse (>= 1.0.0)
-Suggests: knitr,
-    rmarkdown
+Depends: tidyverse (>= 1.0.0)
+Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
+NeedsCompilation: no
+Packaged: 2017-04-25 10:50:48 UTC; niclasj
+Author: Niclas Jonsson [aut, cre],
+  Joakim Nyberg [aut]
