--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%map%")
 export(AdaptiveStudy)
 export(calcHAZVector)
 export(cohorts)
+export(extractInclusionData)
 export(getAllSubjectData)
 export(getCohortDetails)
 export(getCohortNames)
@@ -11,5 +12,6 @@ export(getExt)
 export(getItemsFromSubjects)
 export(getSubjectItems)
 export(getSubjectLevelItems)
+export(plotActiveSubjects)
 export(plotHAZ)
 export(subjects)
