Updated plotStudyCohorts so that it is possible to pass in a wrapVariable.
Moved plotStudyCohorts into a separate file.

Added Cohort name and Cycle name to the output from getCohortDetails

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,5 @@ export(getSubjectItems)
 export(getSubjectLevelItems)
 export(plotActiveSubjects)
 export(plotHAZ)
+export(plotStudyCohorts)
 export(subjects)
