Added function plotHAZTreatmentEff that shows change from cohort baseline HAZ versus cohort time, with linear regression lines for each treatment.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(getSubjectItems)
 export(getSubjectLevelItems)
 export(plotActiveSubjects)
 export(plotHAZ)
+export(plotHAZTreatmentEff)
 export(plotStudyCohorts)
 export(subjects)
