Started to move the FAIRstudy functions into the package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,18 @@
 
 export("%listmap%")
 export(AdaptiveStudy)
+export(AnalyzeDataEvent)
+export(CohortCompleted)
+export(DebugPrint)
+export(GetCohortData)
+export(GetNewRandomizationProbabilities)
+export(ImputeCovariates)
+export(InterimAnalyzesTime)
+export(NewCohort)
+export(RecruitmentRatefunction)
+export(StopEvent)
+export(StudyIncrementEvent)
+export(UpdateProbabilities)
 export(calcHAZVector)
 export(cohorts)
 export(extractInclusionData)
