Coefficients added to output object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(getCohortDetails)
 export(getCohortNames)
 export(getExt)
 export(getItemsFromSubjects)
+export(getRandomizationProbabilities)
 export(getSubjectItems)
 export(getSubjectLevelItems)
 export(plotActiveSubjects)
