Moved the FAIRStudy function into the package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,31 @@
 
 export("%listmap%")
 export(AdaptiveStudy)
+export(AddCohortEvent)
+export(AddEffect)
 export(AnalyzeDataEvent)
 export(CohortCompleted)
 export(DebugPrint)
+export(DropoutEvent)
+export(DropoutTime)
+export(GetAgesAtRandomization)
 export(GetCohortData)
 export(GetNewRandomizationProbabilities)
+export(GetRecruitedSubjects)
+export(GetStartNumIndex)
+export(GetSubject)
+export(GetSubjects)
+export(GetTreatmentRandomizations)
 export(ImputeCovariates)
+export(InitEvent)
 export(InterimAnalyzesTime)
+export(MoveCompletedSubjects)
+export(MoveSubjects)
 export(NewCohort)
+export(RecruitmentEvent)
 export(RecruitmentRatefunction)
+export(SimulateDataEvent)
+export(SimulateHAZ)
 export(StopEvent)
 export(StudyIncrementEvent)
 export(UpdateProbabilities)
@@ -25,6 +41,7 @@ export(getItemsFromSubjects)
 export(getRandomizationProbabilities)
 export(getSubjectItems)
 export(getSubjectLevelItems)
+export(ggplotColours)
 export(plotActiveSubjects)
 export(plotHAZ)
 export(plotHAZTreatmentEff)
