Updated code to be hosted in the R-functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(SimulateHAZ)
 export(StopEvent)
 export(StudyIncrementEvent)
 export(UpdateProbabilities)
+export(UpdateProbabilitiesEvent)
 export(calcHAZVector)
 export(cohorts)
 export(extractInclusionData)
