--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(StudyIncrementEvent)
 export(UpdateProbabilities)
 export(calcHAZVector)
 export(cohorts)
+export(createStudy)
 export(extractInclusionData)
 export(getAllSubjectData)
 export(getCohortDetails)
