Added more default settings in create study and new method for adding new birth cohorts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%listmap%")
 export(AdaptiveStudy)
 export(AddCohortEvent)
 export(AddEffect)
+export(AddNewBirthCohortEvent)
 export(AnalyzeDataEvent)
 export(CohortCompleted)
 export(DebugPrint)
