Impute covariates by predictive mean matching

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,8 @@ Description: The package provides functions to manage simulations to investigate
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 5.0.1
-Depends: tidyverse (>= 1.0.0), zoo (>= 1.7-12), knitr, MASS, lme4
+RoxygenNote: 6.0.1
+Depends: tidyverse (>= 1.0.0), zoo (>= 1.7-12), knitr, MASS, lme4, mice
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 NeedsCompilation: no
