Added futility function and moved the update probabilities code into a separate function (so it can be used in mutiple places).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(calcHAZVector)
 export(cohorts)
 export(createStudy)
 export(extractInclusionData)
+export(futilityFunction)
 export(getAllSubjectData)
 export(getCohortDetails)
 export(getCohortNames)
@@ -50,3 +51,4 @@ export(plotHAZ)
 export(plotHAZTreatmentEff)
 export(plotStudyCohorts)
 export(subjects)
+export(updateProbs)
