--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,10 +38,12 @@ export(createStudy)
 export(extractInclusionData)
 export(futilityFunction)
 export(getAllSubjectData)
+export(getCohortAgeRange)
 export(getCohortDetails)
 export(getCohortNames)
 export(getExt)
 export(getItemsFromSubjects)
+export(getProbData)
 export(getRandomizationProbabilities)
 export(getSubjectItems)
 export(getSubjectLevelItems)
@@ -49,6 +51,7 @@ export(ggplotColours)
 export(plotActiveSubjects)
 export(plotHAZ)
 export(plotHAZTreatmentEff)
+export(plotProbs)
 export(plotStudyCohorts)
 export(subjects)
 export(updateProbs)
