Added funciton to temperate the impact of teh probability updating

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,5 +53,6 @@ export(plotHAZ)
 export(plotHAZTreatmentEff)
 export(plotProbs)
 export(plotStudyCohorts)
+export(probTemperation)
 export(subjects)
 export(updateProbs)
