Created example 2 with multi run functionality. Added three functions to FAIRstudy.R to support it.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(getCohortDetails)
 export(getCohortNames)
 export(getExt)
 export(getItemsFromSubjects)
+export(getMultiProbList)
 export(getProbData)
 export(getRandomizationProbabilities)
 export(getSubjectItems)
@@ -51,8 +52,10 @@ export(ggplotColours)
 export(plotActiveSubjects)
 export(plotHAZ)
 export(plotHAZTreatmentEff)
+export(plotMultiProb)
 export(plotProbs)
 export(plotStudyCohorts)
 export(probTemperation)
+export(runMultiSim)
 export(subjects)
 export(updateProbs)
